--- a/backend-java/src/main/resources/application.properties
+++ b/backend-java/src/main/resources/application.properties
@@ -6,3 +6,17 @@ openai.api.key=${OPENAI_API_KEY:}
 langfuse.secret.key=${LANGFUSE_SECRET_KEY:}
 langfuse.public.key=${LANGFUSE_PUBLIC_KEY:}
 
+# H2 / JPA configuration
+spring.datasource.url=jdbc:h2:mem:handwritingdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Enable H2 console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
